# AR-PiPER

./: README.md
src/: auto.sh  auto2.sh
src/piper/launch/: start_single_piper.launch.py
src/piper_description/rviz/: piper_draft1.rviz
src/piper_eval_msgs/: CMakeLists.txt  package.xml
src/piper_eval_msgs/msg/: PiperRmseMetrics.msg  PiperTeleopMetric.msg
src/piper_eval_msgs/srv/: PiperResetMetrics.srv
src/piper_evaluation/: package.xml  setup.cfg  setup.py
src/piper_evaluation/launch/: piper_evaluation.launch.py  repeatability.launch.py  research_eval.launch.py
src/piper_evaluation/piper_evaluation/: piper_evaluator_node.py  piper_player_node.py  piper_recorder_node.py  piper_research_logger_node.py  websocket_bridge_node.py
src/piper_evaluator_node_OG/: piper_evaluator_node.py
src/piper_ik_to_controller/: CMakeLists.txt  package.xml
src/piper_ik_to_controller/config/: piper_ik.yaml
src/piper_ik_to_controller/launch/: piper_ik_position.launch.py
src/piper_ik_to_controller/src/: piper_ee_pose_publisher.cpp  piper_ik_to_controller_position.cpp  pose_filter_node.cpp
src/piper_moveit/piper_no_gripper_moveit/: CMakeLists.txt  package.xml
src/piper_moveit/piper_with_gripper_moveit/config/: piper.srdf
src/piper_sim/piper_gazebo/scripts/: joint8_ctrl.py
src/piper_teleop_bridge/: package.xml  setup.cfg  setup.py
src/piper_teleop_bridge/piper_teleop_bridge/: websocket_bridge_node.py  websocket_bridge_node3.py  websocket_bridge_node4.py
